[MYCE-86] - feat/event - sonarcube 리팩토링 작업